// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DealCreation State Snapshots Complete State should snapshot anonymous post state 1`] = `
{
  "dealDetails": "Only for insiders",
  "dealTitle": "Secret Deal",
  "imageUris": [
    "file://local/secret.jpg",
  ],
  "isAnonymous": true,
  "isSubmitting": false,
  "selectedRestaurant": {
    "address": "??? St",
    "name": "Mystery Spot",
  },
  "thumbnailIndex": 0,
}
`;

exports[`DealCreation State Snapshots Complete State should snapshot fully filled form ready for submission 1`] = `
{
  "dealDetails": "Valid on all pizzas. Dine-in only. Cannot combine with other offers.",
  "dealTitle": "Buy One Get One Free",
  "expirationDate": "2026-06-30",
  "imageUris": [
    "file://local/image1.jpg",
    "file://local/image2.jpg",
    "file://local/image3.jpg",
  ],
  "isAnonymous": false,
  "isSubmitting": false,
  "selectedCategory": {
    "id": "bogo",
    "name": "BOGO",
  },
  "selectedCuisine": {
    "id": "italian",
    "name": "Italian",
  },
  "selectedRestaurant": {
    "address": "123 Main St, San Francisco, CA",
    "distance_miles": 1.5,
    "google_place_id": "place-123",
    "lat": 37.7749,
    "lng": -122.4194,
    "name": "Pizza Palace",
  },
  "showPreview": true,
  "thumbnailIndex": 0,
}
`;

exports[`DealCreation State Snapshots In Progress State should snapshot partially filled form 1`] = `
{
  "dealDetails": "Every Tuesday",
  "dealTitle": "Half Price Pizza",
  "expirationDate": null,
  "imageUris": [
    "file://local/image1.jpg",
  ],
  "isAnonymous": false,
  "isSubmitting": false,
  "selectedCategory": null,
  "selectedCuisine": {
    "id": "italian",
    "name": "Italian",
  },
  "selectedRestaurant": {
    "address": "123 Main St",
    "distance_miles": 1.5,
    "google_place_id": "place-123",
    "lat": 37.7749,
    "lng": -122.4194,
    "name": "Pizza Palace",
  },
  "showPreview": false,
  "thumbnailIndex": 0,
}
`;

exports[`DealCreation State Snapshots Initial State should snapshot empty form state 1`] = `
{
  "dealDetails": "",
  "dealTitle": "",
  "expirationDate": null,
  "imageUris": [],
  "isAnonymous": false,
  "isSubmitting": false,
  "selectedCategory": null,
  "selectedCuisine": null,
  "selectedRestaurant": null,
  "showCalendar": false,
  "showCategoryPicker": false,
  "showCuisinePicker": false,
  "showPhotoOptions": false,
  "showPreview": false,
  "thumbnailIndex": 0,
}
`;

exports[`DealCreation State Snapshots Submitting State should snapshot submission in progress 1`] = `
{
  "dealTitle": "Test Deal",
  "imageUris": [
    "file://local/image.jpg",
  ],
  "isSubmitting": true,
  "selectedRestaurant": {
    "name": "Test Restaurant",
  },
  "submitProgress": "Uploading images...",
}
`;

exports[`DealCreation State Snapshots Validation Error State should snapshot validation errors 1`] = `
{
  "images": "At least one photo is required",
  "restaurant": "Please select a restaurant",
  "title": "Title is required",
}
`;

exports[`DealEdit State Snapshots Error State should snapshot fetch error 1`] = `
{
  "dealId": "deal-edit-123",
  "dealTitle": "",
  "error": "Deal not found or you do not have permission to edit.",
  "loading": false,
  "localImages": [],
}
`;

exports[`DealEdit State Snapshots Loading State should snapshot loading edit state 1`] = `
{
  "dealDetails": "",
  "dealId": "deal-edit-123",
  "dealTitle": "",
  "error": null,
  "expirationDate": null,
  "imagesToRemove": [],
  "isAnonymous": false,
  "isSaving": false,
  "loading": true,
  "localImages": [],
  "newImages": [],
  "restaurant": null,
  "thumbnailIndex": 0,
}
`;

exports[`DealEdit State Snapshots Modified State should snapshot edited deal with changes 1`] = `
{
  "dealDetails": "Updated description with more details",
  "dealId": "deal-edit-123",
  "dealTitle": "Updated Deal Title",
  "hasChanges": true,
  "imagesToRemove": [
    "img-2",
  ],
  "isSaving": false,
  "localImages": [
    {
      "display_order": 0,
      "id": "img-1",
      "public_url": "https://example.com/img1.jpg",
    },
  ],
  "newImages": [
    {
      "uri": "file://local/new-image.jpg",
    },
  ],
  "thumbnailIndex": 1,
}
`;

exports[`DealEdit State Snapshots Populated State should snapshot loaded deal for editing 1`] = `
{
  "dealDetails": "Original deal description",
  "dealId": "deal-edit-123",
  "dealTitle": "Original Deal Title",
  "error": null,
  "expirationDate": "2026-05-15",
  "hasChanges": false,
  "imagesToRemove": [],
  "isAnonymous": false,
  "isSaving": false,
  "loading": false,
  "localImages": [
    {
      "display_order": 0,
      "id": "img-1",
      "public_url": "https://example.com/img1.jpg",
    },
    {
      "display_order": 1,
      "id": "img-2",
      "public_url": "https://example.com/img2.jpg",
    },
  ],
  "newImages": [],
  "restaurant": {
    "address": "456 Oak St",
    "id": "rest-123",
    "name": "Original Restaurant",
  },
  "thumbnailIndex": 0,
}
`;

exports[`DealEdit State Snapshots Saving State should snapshot saving in progress 1`] = `
{
  "dealId": "deal-edit-123",
  "isSaving": true,
  "saveProgress": {
    "current": 2,
    "step": "Updating images",
    "total": 4,
  },
}
`;

exports[`DealPreview State Snapshots Callbacks should snapshot callback interface 1`] = `
{
  "onClose": "function",
  "onPost": "function",
  "visible": true,
}
`;

exports[`DealPreview State Snapshots Distance Calculation should snapshot distance display variants 1`] = `
{
  "far": {
    "display": "10.5 mi",
    "distance_miles": 10.5,
  },
  "nearby": {
    "display": "0.2 mi",
    "distance_miles": 0.2,
  },
  "short_drive": {
    "display": "2.0 mi",
    "distance_miles": 2,
  },
  "walking": {
    "display": "0.5 mi",
    "distance_miles": 0.5,
  },
}
`;

exports[`DealPreview State Snapshots Preview Data should snapshot anonymous preview 1`] = `
{
  "dealDetails": "Posted anonymously",
  "dealTitle": "Anonymous Deal",
  "imageUris": [
    "file://local/anon.jpg",
  ],
  "isAnonymous": true,
  "selectedRestaurant": {
    "name": "Some Restaurant",
  },
  "thumbnailIndex": 0,
  "userData": {
    "profilePicture": null,
    "username": "Anonymous",
  },
}
`;

exports[`DealPreview State Snapshots Preview Data should snapshot full preview data structure 1`] = `
{
  "dealDetails": "This is how the deal will appear to users.",
  "dealTitle": "Preview Deal Title",
  "expirationDate": "2026-04-30",
  "imageUris": [
    "file://local/preview1.jpg",
    "file://local/preview2.jpg",
  ],
  "isAnonymous": false,
  "selectedCategory": {
    "id": "lunch",
    "name": "Lunch Special",
  },
  "selectedCuisine": {
    "id": "american",
    "name": "American",
  },
  "selectedRestaurant": {
    "address": "789 Preview Ave, San Francisco, CA",
    "distance_miles": 0.8,
    "lat": 37.7849,
    "lng": -122.4094,
    "name": "Preview Restaurant",
  },
  "thumbnailIndex": 0,
  "userData": {
    "city": "San Francisco",
    "profilePicture": "https://example.com/user.jpg",
    "state": "CA",
    "username": "previewUser",
  },
}
`;
